--- a/main_system/templates/main/home.html
+++ b/main_system/templates/main/home.html
@@ -72,7 +72,7 @@
 
         <div class="position-relative d-flex justify-content-center">
             <button class="review-scroll-btn left-btn" onclick="scrollReviews(-1)">&#8249;</button>
-            <div class="overflow-hidden py-3" id="reviewSlider" style="scroll-behavior: smooth; white-space: nowrap; width: 80%;">
+            <div class="overflow-hidden py-3" id="reviewSlider" style="scroll-behavior: smooth; white-space: nowrap; width: 80%">
                 <div class="d-flex justify-content-start">
                     {% for review in reviews %}
                         <div class="review-item text-center mx-3" style="width: 400px; display: inline-block;">
