--- a/main_system/templates/customer/profile.html
+++ b/main_system/templates/customer/profile.html
@@ -9,7 +9,7 @@
             <div class="card mb-4 border-0 shadow-sm">
                 <div class="card-body text-center">
                     <div class="mb-3">
-                        <img src="{% static 'image/avatar/default.png' %}" alt="Profile" class="rounded-circle img-fluid" style="width: 120px;">
+                        <img src="{% static 'image/user_profile/user_pic.webp' %}" alt="Profile" class="rounded-circle img-fluid" style="width: 120px;">
                     </div>
                     <h4 class="mb-1">{{ user.name }}</h4>
                     <p class="text-muted mb-3">{{ user.email }}</p>
