--- a/main_system/templates/main/home.html
+++ b/main_system/templates/main/home.html
@@ -72,12 +72,12 @@
 
         <div class="position-relative d-flex justify-content-center">
             <button class="review-scroll-btn left-btn" onclick="scrollReviews(-1)">&#8249;</button>
-            <div class="overflow-hidden py-3" id="reviewSlider" style="scroll-behavior: smooth; white-space: nowrap; width: 80%">
+            <div class="overflow-hidden py-3" id="reviewSlider" style="scroll-behavior: smooth; white-space: nowrap; width: 100%;">
                 <div class="d-flex justify-content-start">
                     {% for review in reviews %}
-                        <div class="review-item text-center mx-3" style="width: 400px; display: inline-block;">
+                        <div class="review-item text-center mx-3" style="min-width: 300px; max-width: 400px; display: inline-block;">
                             <div class="card p-3 shadow-sm" style="border-radius: 10px; background: #f8f9fa;">
-                                <p class="text-muted">"{{ review.comment }}"</p>
+                                <p class="text-muted review-card">"{{ review.comment }}"</p>
                                 <div class="d-flex align-items-center justify-content-center">
                                     <img src="/media/review_picture/user_pic.webp" class="rounded-circle me-2" alt="User" style="width: 50px; height: 50px; object-fit: cover;">
 {#                                    <img src="https://via.placeholder.com/50" class="rounded-circle me-2" alt="User">#}
@@ -248,6 +248,14 @@
         scroll-behavior: smooth;
         white-space: nowrap;
         width: 80%;
+    }
+
+    .review-card {
+        width: 250px;
+        height: auto;
+        font-size: 14px;
+        white-space: normal;
+        overflow: visible;
     }
 </style>
 
